--- a/vol/locale/fr/LC_MESSAGES/django.po
+++ b/vol/locale/fr/LC_MESSAGES/django.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2019-05-16 14:57+0000\n"
+"POT-Creation-Date: 2019-05-20 11:57+0000\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -18,6 +18,47 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "Plural-Forms: nplurals=2; plural=(n > 1);\n"
 
+#: vol/forms.py:28 vol/templates/vol/base_homepage.html:95
+#: vol/templates/vol/index.html:28
+msgid "Plane"
+msgstr "Avion"
+
+#: vol/forms.py:31 vol/models.py:318
+#, fuzzy
+#| msgid "Duration Day"
+msgid "Day duration"
+msgstr "Durée jour"
+
+#: vol/forms.py:32 vol/models.py:329
+#, fuzzy
+#| msgid "Duration Day"
+msgid "Night duration"
+msgstr "Durée nuit"
+
+#: vol/forms.py:33 vol/models.py:364 vol/templates/vol/vol_add.html:254
+#, fuzzy
+#| msgid "Actions"
+msgid "IFR duration"
+msgstr "Durée IFR"
+
+#: vol/forms.py:34 vol/models.py:384
+#, fuzzy
+#| msgid "Simu"
+msgid "Simu duration"
+msgstr "Durée simu"
+
+#: vol/forms.py:35 vol/models.py:374 vol/templates/vol/vol_add.html:290
+#, fuzzy
+#| msgid "Duration Day"
+msgid "DC duration"
+msgstr "Durée DC"
+
+#: vol/forms.py:36
+#, fuzzy
+#| msgid "IFR Arrival"
+msgid "IFR arrival"
+msgstr "Arrivée IFR"
+
 #: vol/models.py:38
 msgid "Free"
 msgstr "Gratuit"
@@ -26,7 +67,8 @@ msgstr "Gratuit"
 msgid "Pay"
 msgstr "Payant"
 
-#: vol/models.py:42 vol/models.py:206 vol/templates/vol/detail.html:214
+#: vol/models.py:42 vol/models.py:206 vol/models.py:271
+#: vol/templates/vol/detail.html:214
 msgid "Pilot in Command"
 msgstr "Commandant de bord"
 
@@ -34,8 +76,8 @@ msgstr "Commandant de bord"
 msgid "First Officer"
 msgstr "Copilote"
 
-#: vol/models.py:44 vol/models.py:208 vol/templates/vol/detail.html:258
-#: vol/templates/vol/index.html:51
+#: vol/models.py:44 vol/models.py:208 vol/models.py:299
+#: vol/templates/vol/detail.html:258 vol/templates/vol/index.html:51
 msgid "Instructor"
 msgstr "Instructeur"
 
@@ -75,6 +117,19 @@ msgstr "Employeur"
 msgid "Language"
 msgstr "Langue"
 
+#: vol/models.py:88
+#, fuzzy
+msgid "IATA code"
+msgstr "Code AITA"
+
+#: vol/models.py:92 vol/templates/vol/iata_add.html:53
+msgid "City"
+msgstr "Ville"
+
+#: vol/models.py:101 vol/models.py:142 vol/models.py:178 vol/models.py:223
+msgid "User"
+msgstr "Utilisateur"
+
 #: vol/models.py:106 vol/templates/vol/iata_add.html:52
 #, fuzzy
 msgid "IATA Code"
@@ -105,14 +160,24 @@ msgstr "Plusieurs"
 msgid "Multi-engine"
 msgstr "Multimoteurs"
 
-#: vol/models.py:147 vol/templates/vol/detail.html:193
+#: vol/models.py:130 vol/models.py:147 vol/templates/vol/detail.html:193
 #: vol/templates/vol/type_avion_add.html:54
 msgid "Aircraft type"
 msgstr "Type d'avion"
 
+#: vol/models.py:136 vol/templates/vol/type_avion_add.html:55
+msgid "Amount of engines"
+msgstr "Nombre de moteurs"
+
 #: vol/models.py:148
 msgid "Aircraft types"
 msgstr "Types d'avion"
+
+#: vol/models.py:167 vol/models.py:351
+#, fuzzy
+#| msgid "Registration Number"
+msgid "Registration number"
+msgstr "Immatriculation"
 
 #: vol/models.py:183 vol/templates/vol/immatriculation_add.html:57
 msgid "Registration Number"
@@ -151,10 +216,6 @@ msgstr "Prénom"
 msgid "Family name"
 msgstr "Nom de famille"
 
-#: vol/models.py:223
-msgid "User"
-msgstr "Utilisateur"
-
 #: vol/models.py:228 vol/templates/vol/base_homepage.html:94
 #: vol/templates/vol/index.html:27 vol/templates/vol/pilote_add.html:53
 #: vol/templates/vol/somme.html:20
@@ -165,16 +226,155 @@ msgstr "Pilote"
 msgid "Pilots"
 msgstr "Pilotes"
 
-#: vol/models.py:318
-msgid "duree_jour"
+#: vol/models.py:265
+#, fuzzy
+#| msgid "Flight Database"
+msgid "Flight date"
+msgstr "Base de données de vols"
+
+#: vol/models.py:277
+#, fuzzy
+#| msgid "First Officer"
+msgid "First officer"
+msgstr "Copilote"
+
+#: vol/models.py:283
+#, fuzzy
+#| msgid "Observer"
+msgid "Observer 1"
+msgstr "Observateur"
+
+#: vol/models.py:291
+#, fuzzy
+#| msgid "Observer"
+msgid "Observer 2"
+msgstr "Observateur"
+
+#: vol/models.py:307
+msgid "Departure"
 msgstr ""
+
+#: vol/models.py:313
+#, fuzzy
+#| msgid "IFR Arrival"
+msgid "Arrival"
+msgstr "Arrivée IFR"
 
 #: vol/models.py:319 vol/models.py:330
 msgid "[DD] [HH:[MM:]]ss[.uuuuuu] format"
 msgstr ""
 
-#: vol/models.py:329
-msgid "duree_nuit"
+#: vol/models.py:339 vol/templates/vol/detail.html:142
+#: vol/templates/vol/index.html:57
+#, fuzzy
+#| msgid "Actions"
+msgid "Function"
+msgstr "Fonction"
+
+#: vol/models.py:344 vol/templates/vol/detail.html:146
+#: vol/templates/vol/index.html:58
+msgid "Position"
+msgstr "Poste"
+
+#: vol/models.py:354 vol/templates/vol/detail.html:170
+msgid "Notes"
+msgstr "Observations"
+
+#: vol/models.py:359
+#, fuzzy
+#| msgid "IFR Arrival"
+msgid "IFR arrivals"
+msgstr "Arrivée IFR"
+
+#: vol/models.py:370
+#, fuzzy
+#| msgid "Duration Night"
+msgid "DC flight"
+msgstr "Vol DC"
+
+#: vol/models.py:380 vol/templates/vol/detail.html:150
+#: vol/templates/vol/vol_add.html:197
+#, fuzzy
+#| msgid "Simu"
+msgid "Simulator"
+msgstr "Simulateur"
+
+#: vol/templates/registration/logged_out.html:9
+msgid "Logged out"
+msgstr ""
+
+#: vol/templates/registration/logged_out.html:13
+msgid "Go to Homepage"
+msgstr ""
+
+#: vol/templates/registration/login.html:9
+#: vol/templates/registration/login.html:51
+#: vol/templates/vol/base_homepage.html:73
+msgid "Login"
+msgstr "Connexion"
+
+#: vol/templates/registration/login.html:15
+msgid "Your username and password do not match. Please try again."
+msgstr ""
+
+#: vol/templates/registration/login.html:22
+msgid ""
+"Your account does not have access to this page. To continue, please login "
+"with an account that has access to it."
+msgstr ""
+
+#: vol/templates/registration/login.html:24
+#, fuzzy
+#| msgid "Please {{ login_url }} to see this page."
+msgid "Please login to view this page."
+msgstr "Veuillez vous connecter pour voir cette page"
+
+#: vol/templates/registration/login.html:53
+msgid "Password forgotten?"
+msgstr ""
+
+#: vol/templates/registration/password_change_form.html:6
+msgid "Password reset"
+msgstr ""
+
+#: vol/templates/registration/password_reset_complete.html:5
+msgid "The password has been changed!"
+msgstr ""
+
+#: vol/templates/registration/password_reset_complete.html:6
+msgid "Login again?"
+msgstr ""
+
+#: vol/templates/registration/password_reset_confirm.html:6
+msgid "Please enter (and confirm) your new password."
+msgstr ""
+
+#: vol/templates/registration/password_reset_confirm.html:12
+msgid "New password:"
+msgstr ""
+
+#: vol/templates/registration/password_reset_confirm.html:17
+msgid "Confirm password:"
+msgstr ""
+
+#: vol/templates/registration/password_reset_confirm.html:27
+msgid "Password reset failed"
+msgstr ""
+
+#: vol/templates/registration/password_reset_confirm.html:28
+msgid ""
+"The password reset link was invalid, possibly because it has already been "
+"used. Please request a new password reset."
+msgstr ""
+
+#: vol/templates/registration/password_reset_done.html:5
+msgid ""
+"We've emailed you instructions for setting your password. If they haven't "
+"arrived in a few minutes, check your spam folder."
+msgstr ""
+
+#: vol/templates/registration/password_reset_form.html:12
+msgid "Reset password"
 msgstr ""
 
 #: vol/templates/vol/base_homepage.html:9
@@ -212,10 +412,6 @@ msgstr "Profil"
 msgid "Logout"
 msgstr "Déconnexion"
 
-#: vol/templates/vol/base_homepage.html:73
-msgid "Login"
-msgstr "Connexion"
-
 #: vol/templates/vol/base_homepage.html:84 vol/templates/vol/index.html:17
 #: vol/templates/vol/somme.html:10
 #, fuzzy
@@ -240,10 +436,6 @@ msgstr "Ajouter"
 #| msgid "Flights"
 msgid "Flight"
 msgstr "Vol"
-
-#: vol/templates/vol/base_homepage.html:95 vol/templates/vol/index.html:28
-msgid "Plane"
-msgstr "Avion"
 
 #: vol/templates/vol/base_homepage.html:96 vol/templates/vol/index.html:29
 #: vol/templates/vol/somme.html:22
@@ -281,26 +473,6 @@ msgstr "Supprimer le vol"
 msgid "Are you sure you want to delete this flight?"
 msgstr "Voulez-vous vraiement supprimer ce vol ?"
 
-#: vol/templates/vol/detail.html:142 vol/templates/vol/index.html:57
-#, fuzzy
-#| msgid "Actions"
-msgid "Function"
-msgstr "Fonction"
-
-#: vol/templates/vol/detail.html:146 vol/templates/vol/index.html:58
-msgid "Position"
-msgstr "Poste"
-
-#: vol/templates/vol/detail.html:150 vol/templates/vol/vol_add.html:197
-#, fuzzy
-#| msgid "Simu"
-msgid "Simulator"
-msgstr "Simulateur"
-
-#: vol/templates/vol/detail.html:170
-msgid "Notes"
-msgstr "Observations"
-
 #: vol/templates/vol/detail.html:184
 #, fuzzy
 #| msgid "Aircraft type"
@@ -336,7 +508,7 @@ msgstr "Nouvel aéroport"
 #: vol/templates/vol/iata_add.html:31
 #: vol/templates/vol/immatriculation_add.html:36
 #: vol/templates/vol/pilote_add.html:31
-#: vol/templates/vol/type_avion_add.html:32 vol/templates/vol/vol_add.html:312
+#: vol/templates/vol/type_avion_add.html:32 vol/templates/vol/vol_add.html:311
 msgid "Save"
 msgstr "Enregistrer"
 
@@ -358,10 +530,6 @@ msgstr ""
 "Il est impossible de supprimer un aéroport lié à un vol. Afin de supprimer "
 "un aéroport, il faut en premier lieu supprimer ou modifier le ou les vols "
 "liés."
-
-#: vol/templates/vol/iata_add.html:53
-msgid "City"
-msgstr "Ville"
 
 #: vol/templates/vol/iata_add.html:54
 #, fuzzy
@@ -399,6 +567,12 @@ msgstr "Il n'y a pas d'aéroports enregistrés."
 #| msgid "Pilot"
 msgid "New Plane"
 msgstr "Nouvel avion"
+
+#: vol/templates/vol/immatriculation_add.html:27
+#, fuzzy
+#| msgid "Aircraft type"
+msgid "Add an aircraft type"
+msgstr "Ajouter un type d'avion"
 
 #: vol/templates/vol/immatriculation_add.html:42
 #, fuzzy
@@ -635,10 +809,6 @@ msgstr ""
 "supprimer un type d'avion, il faut en premier lieu supprimer ou modifier le "
 "ou les vols liés."
 
-#: vol/templates/vol/type_avion_add.html:55
-msgid "Amount of engines"
-msgstr "Nombre de moteurs"
-
 #: vol/templates/vol/type_avion_add.html:74
 #, fuzzy
 #| msgid "Impossible to delete the pilot because a flight is linked to it"
@@ -691,8 +861,16 @@ msgstr "Aéroports et durées"
 #: vol/templates/vol/vol_add.html:144 vol/templates/vol/vol_add.html:170
 #: vol/templates/vol/vol_add.html:219 vol/templates/vol/vol_add.html:253
 #: vol/templates/vol/vol_add.html:289
-msgid "Conversion"
+#, fuzzy
+#| msgid "Conversion"
+msgid "Convert"
 msgstr "Conversion"
+
+#: vol/templates/vol/vol_add.html:220
+#, fuzzy
+#| msgid "Simu"
+msgid "Simulator duration"
+msgstr "Durée simu"
 
 #: vol/templates/vol/vol_add.html:233
 msgid "IFR"
@@ -701,6 +879,11 @@ msgstr "IFR"
 #: vol/templates/vol/vol_add.html:266
 msgid "Dual commands"
 msgstr "Double commande"
+
+#, fuzzy
+#~| msgid "Amount of engines"
+#~ msgid "Amount of IFR arrivals"
+#~ msgstr "Arrivées IFR"
 
 #, fuzzy
 #~| msgid "Pilot in Command"
